<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bottom_corner">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_marginTop="55dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            />

        <ImageView
            android:id="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:layout_width="66dp"
            android:layout_height="88dp"
            android:src="@drawable/ic_logo_nuble" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_img_nurse" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".ui.test.TestFragment">

        <TextView
            android:id="@+id/text_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/test_select_title"
            android:textAlignment="center"
            android:textSize="@dimen/btn_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/text_test"
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_test_me"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="@dimen/btn_width_large"
                android:layout_height="@dimen/btn_height_large"
                android:backgroundTint="@color/color_btn_blue_light"
                android:text="@string/text_test_me"
                android:textStyle="bold"
                android:textSize="@dimen/btn_text_size"
                app:cornerRadius="@dimen/corner_btn"
                tools:ignore="MissingConstraints" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_test_other"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="@dimen/btn_width_large"
                android:layout_height="@dimen/btn_height_large"
                android:backgroundTint="@color/color_btn_blue_dark"
                android:text="@string/text_test_other"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/btn_text_size"
                app:cornerRadius="@dimen/corner_btn" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>